// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canvas adjusts the height when updating dimensions 1`] = `
<body>
  <div>
    <div
      class="canvas_container cursor_dragging"
      id="canvas-container"
    >
      <div
        class="canvas_background"
        id="canvas_background"
      >
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          tabindex="0"
        >
          <div
            class="panzoom"
            id="panzoom"
          >
            <div />
            <div
              class="draggable"
              data-testid="draggable_132de855-4042-4dc1-a18f-cc2e6a8f790a"
              style="left: 100px; top: 1200px;"
            />
          </div>
          <div
            class="zoom_control"
          >
            <div
              class="guiding_wrapper"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <div
                  class="unnnic-tooltip zoom_tooltip"
                  data-passed-props="[object Object]"
                  data-v-49d78ffa=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-49d78ffa=""
                    style="all: unset;"
                  >
                    <div
                      class="out"
                    >
                      <span
                        class="material-symbols-rounded"
                      >
                        remove
                      </span>
                    </div>
                    <div
                      class="percentage"
                    >
                      100
                      <span
                        class="material-symbols-rounded"
                      >
                        percent
                      </span>
                    </div>
                    <div
                      class="in"
                    >
                      <span
                        class="material-symbols-rounded"
                      >
                        add
                      </span>
                    </div>
                  </div>
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-top"
                    data-v-49d78ffa=""
                  >
                     Zoom 
                    <br
                      data-v-49d78ffa=""
                    />
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-49d78ffa=""
                    >
                       Ctrl + Scroll 
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="guiding_wrapper"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <div
                  class="unnnic-tooltip start_tooltip"
                  data-passed-props="[object Object]"
                  data-v-49d78ffa=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-49d78ffa=""
                    style="all: unset;"
                  >
                    <div
                      class="start"
                    >
                      <span
                        class="hide"
                      >
                        Start of flow
                      </span>
                      <span
                        class="material-symbols-rounded"
                      >
                        arrow_upward
                      </span>
                    </div>
                  </div>
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-right"
                    data-v-49d78ffa=""
                  >
                      
                    <br
                      data-v-49d78ffa=""
                    />
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-49d78ffa=""
                    >
                       Ctrl + Enter 
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas initializes the height to the lowest draggable 1`] = `
<body>
  <div>
    <div
      class="canvas_container cursor_dragging"
      id="canvas-container"
    >
      <div
        class="canvas_background"
        id="canvas_background"
      >
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          tabindex="0"
        >
          <div
            class="panzoom"
            id="panzoom"
          >
            <div />
            <div
              class="draggable"
              data-testid="draggable_1e47a1e1-3c67-4df5-adf1-da542c789adb"
              style="left: 100px; top: 1200px;"
            />
          </div>
          <div
            class="zoom_control"
          >
            <div
              class="guiding_wrapper"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <div
                  class="unnnic-tooltip zoom_tooltip"
                  data-passed-props="[object Object]"
                  data-v-49d78ffa=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-49d78ffa=""
                    style="all: unset;"
                  >
                    <div
                      class="out"
                    >
                      <span
                        class="material-symbols-rounded"
                      >
                        remove
                      </span>
                    </div>
                    <div
                      class="percentage"
                    >
                      100
                      <span
                        class="material-symbols-rounded"
                      >
                        percent
                      </span>
                    </div>
                    <div
                      class="in"
                    >
                      <span
                        class="material-symbols-rounded"
                      >
                        add
                      </span>
                    </div>
                  </div>
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-top"
                    data-v-49d78ffa=""
                  >
                     Zoom 
                    <br
                      data-v-49d78ffa=""
                    />
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-49d78ffa=""
                    >
                       Ctrl + Scroll 
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="guiding_wrapper"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <div
                  class="unnnic-tooltip start_tooltip"
                  data-passed-props="[object Object]"
                  data-v-49d78ffa=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-49d78ffa=""
                    style="all: unset;"
                  >
                    <div
                      class="start"
                    >
                      <span
                        class="hide"
                      >
                        Start of flow
                      </span>
                      <span
                        class="material-symbols-rounded"
                      >
                        arrow_upward
                      </span>
                    </div>
                  </div>
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-right"
                    data-v-49d78ffa=""
                  >
                      
                    <br
                      data-v-49d78ffa=""
                    />
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-49d78ffa=""
                    >
                       Ctrl + Enter 
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Canvas reflows collisions 1`] = `
Array [
  Array [
    "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
  ],
]
`;

exports[`Canvas render default 1`] = `
<body>
  <div>
    <div
      class="canvas_container cursor_dragging"
      id="canvas-container"
    >
      <div
        class="canvas_background"
        id="canvas_background"
      >
        <div
          class="canvas"
          data-testid="canvas"
          id="canvas"
          tabindex="0"
        >
          <div
            class="panzoom"
            id="panzoom"
          >
            <div />
          </div>
          <div
            class="zoom_control"
          >
            <div
              class="guiding_wrapper"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <div
                  class="unnnic-tooltip zoom_tooltip"
                  data-passed-props="[object Object]"
                  data-v-49d78ffa=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-49d78ffa=""
                    style="all: unset;"
                  >
                    <div
                      class="out"
                    >
                      <span
                        class="material-symbols-rounded"
                      >
                        remove
                      </span>
                    </div>
                    <div
                      class="percentage"
                    >
                      100
                      <span
                        class="material-symbols-rounded"
                      >
                        percent
                      </span>
                    </div>
                    <div
                      class="in"
                    >
                      <span
                        class="material-symbols-rounded"
                      >
                        add
                      </span>
                    </div>
                  </div>
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-top"
                    data-v-49d78ffa=""
                  >
                     Zoom 
                    <br
                      data-v-49d78ffa=""
                    />
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-49d78ffa=""
                    >
                       Ctrl + Scroll 
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="guiding_wrapper"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <div
                  class="unnnic-tooltip start_tooltip"
                  data-passed-props="[object Object]"
                  data-v-49d78ffa=""
                >
                  <div
                    __use_react_component_wrap=""
                    data-v-49d78ffa=""
                    style="all: unset;"
                  >
                    <div
                      class="start"
                    >
                      <span
                        class="hide"
                      >
                        Start of flow
                      </span>
                      <span
                        class="material-symbols-rounded"
                      >
                        arrow_upward
                      </span>
                    </div>
                  </div>
                  <span
                    class="unnnic-tooltip-label unnnic-tooltip-label-right"
                    data-v-49d78ffa=""
                  >
                      
                    <br
                      data-v-49d78ffa=""
                    />
                    <span
                      class="unnnic-tooltip-label-shortcut"
                      data-v-49d78ffa=""
                    >
                       Ctrl + Enter 
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
